--- a/empower_u/pubspec.yaml
+++ b/empower_u/pubspec.yaml
@@ -53,6 +53,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-ExtraBold.ttf
+          weight: 800
+
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
