--- a/empower_u/pubspec.yaml
+++ b/empower_u/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animated_splash_screen: ^1.3.0
+  easy_search_bar: ^2.5.0
 
 dev_dependencies:
   flutter_test:
