--- a/empower_u/pubspec.yaml
+++ b/empower_u/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_splash_screen: ^1.3.0
   easy_search_bar: ^2.5.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
